# scene-language

./: .gitignore  LICENSE.md  README.md  pyproject.toml  setup.py  text_to_scene.ipynb
assets/: cone.ply  cube.ply  cylinder.ply  sphere.ply
colab/: text_to_scene.ipynb
engine/: constants.py
engine/utils/: argparse_utils.py  camera_utils.py  claude_client.py  code_llama_client.py  codellama_utils.py  config.py  cv2_utils.py  dense_diffusion_utils.py  docstring_utils.py  execute_utils.py  graph_utils.py  html.py  lm_utils.py  mesh_utils.py  mitsuba_utils.py  omost_utils.py  parse_utils.py  parsel_utils.py  sds_utils.py  train_utils.py  type_utils.py  visualize_utils.py
resources/examples/: jenga.py
scripts/: run.py  run_self_reflect_with_moe.py  run_unconstrained.py  run_utils.py
scripts/experimental/: simulate_pybullet.py
scripts/installation/: test_install.py
scripts/postprocess/: export.py  render.py  truncate.py
scripts/preprocess/: collect_header.py
scripts/prompts/: _engine_utils_exposed.py  _engine_utils_exposed_v2.py  _engine_utils_lmd.py  _engine_utils_mi.py  _engine_utils_mi_from_minecraft.py  _engine_utils_mi_material.py  _engine_utils_minecraft.py  _engine_utils_neural.py  _shape_utils.py  assert_utils.py  calc_utils.py  controlnet_helper.py  convert_mitsuba_program_to_threejs.py  dense_diffusion_helper.py  dependency_helper.py  draw_graph.py  dsl_utils.py  engine_utils.py  example_postprocess.py  flow_utils.py  gala3d_helper.py  helper.py  impl.py  impl_eval.py  impl_helper.py  impl_minecraft.py  impl_parse.py  impl_parse_dependency.py  (+26 more)
(+774 files in other folders)
