[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "engine"
version = "0.0.1"
description = "Scene Language"
readme = "README.md"
requires-python = ">=3.11.0"
classifiers = [
    "Programming Language :: Python",
]
dependencies = [
    "mitsuba",
    "unidecode", 
    "Pillow",
    "anthropic",
    "transforms3d",
    "astor",
    "scipy",
    "jaxtyping",
    "imageio",
    "tqdm",
    "trimesh",
    "ipdb",
]

[project.optional-dependencies]

[project.scripts]

[tool.setuptools.packages.find]
where = ["."]
include = ["engine"]